# civitiai-tools

./: .coderabbit.yaml  .env.example  .env.style_search  .gitignore  CLAUDE.md  DIRECTORY_STRUCTURE.md  README.md  activate_env.sh  create_hall_of_fame_ranking.py  requirements.txt  test_env.py
.github/linters/: .ruff.toml
_docs/x/: x.md
civitai-downloader/: README.md  README_ja.md  __init__.py  civitai  pyproject.toml  requirements.txt  setup.py  test_client_demo.py  test_improved_client.py
civitai-downloader-v2/: .env.example  .gitignore  README.md  README_JA.md  analytics.db  analyze_descriptions.py  apply_schema_migration.py  convert_to_csv.py  cross_session_check.py  extract_description_logic.py  test_category_streaming.py  test_concept_200.py  test_hash_verification.py  test_limit_fix.py  test_noobai_checkpoint.py  test_real_descriptions.py  test_streaming_search.py  test_style_200.py  test_version_management.py  verify_results.py
civitai-downloader-v2/config/: app_config.yml  app_config.yml.example
civitai-downloader-v2/data/: analytics.db  civitai.db-shm  civitai_downloader.db
civitai-downloader-v2/deployment/: Dockerfile  docker-compose.yml  healthcheck.py
civitai-downloader-v2/docs/: DEVELOPER.md  README.md  architecture_overview.md  audit_issues_report.md  audit_report_phase5_complete.md  (+31 more)
civitai-downloader/civitai_downloader/: __init__.py  __main__.py  api_client.py  cli.py  config.py  download.py  interfaces.py  search.py  storage.py
civitai-downloader/docs/: README.md  cli-argument-parsing-issue.md  cli-issue-final-solution.md  current_issues_and_improvement_plan.md  implementation_roadmap.md  technical_solutions.md  testing_strategy.md
civitai-downloader/src/: __init__.py  __main__.py  api_client.py  cli.py  config.py  exceptions.py  interfaces.py  preview.py  search.py  utils.py
civitai-downloader/src/api/: client.py  exceptions.py  models.py  rate_limiter.py
civitai-downloader/src/core/: search.py
civitai-downloader/tests/: __init__.py  test_api_client.py  test_download.py  test_download_simplified.py  test_meaningful_api_client.py  test_meaningful_integration.py  test_meaningful_search.py  test_preview.py  test_preview_functional.py  test_search.py  test_storage.py
civitai-downloader/tests/fixtures/: mock_responses.json
civitai-downloader/tests/problematic/: README.md  __init__.py  test_api_client_problematic.py  test_search_additional_problematic.py  test_search_problematic.py  test_unit_problematic.py
civitai-downloader/tests/unit/: test_api_client.py  test_search_engine.py
docs/: README.md  api_image_findings.md  civitai.md  civitai_api_comprehensive_specification.md  design-review-evaluation.md  plan.md  requirements.md  review.md  searchplan.md
pre-research/: pytest.ini  requirements.txt
temp_scripts/: README.md  create_final_top100_html_report.py  create_hall_of_fame_html_report.py  create_top100_excluding_hall_of_fame.py  organize_directory.py
(+306 files in other folders)
